# LLMinify

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
example-projects/1723993952_1254582-claude-sonnet-HexGL/: launch.js
example-projects/1723993952_1254582-claude-sonnet-HexGL/bkcore/: Audio.js
example-projects/1725063377_306209-gpt4o-snake-game/: index.js
example-projects/1725190903_8904347-gemini-snake-game/: index.js
example-projects/1725190978_1754901-gemini-snake-game/: index.js
example-projects/HexGL/: cache.appcache  package.webapp
example-projects/HexGL/audio/: LICENSE
example-projects/HexGL/bkcore.coffee/: ImageData.coffee  ImageData.js  (+5 more)
example-projects/codeforces/: 1881_a.js  1881_b.js  1881_c.js  1881_d.js  1884_a.js  1886_a.js  1886_b.js  1887_c.js  1890_a.js  1894_a.js  1895_a.js  1895_b.js  1896_a.js  1899_a.js  1899_b.js  1900_a.js  1901_a.js  1901_d.js  1902_a.js  1903_a.js  1904_a.js  1905_a.js  1907_a.js  1907_b.js  1912_l.js  1991_f.js  1993_a.js  1993_b.js  1997_a.js  1998_a.js  1999_a.js  1999_b.js  1999_c.js  1999_d.js  2000_a.js  2000_b.js  2000_c.js  2001_a.js  2001_b.js  2004_a.js  (+5 more)
example-projects/simple-script/: index.js
example-projects/snake-game/: index.js
saved-minifications/terser-codeforces/: 1881_a.js  1884_a.js  1891_b.js  1895_b.js  1901_d.js  1903_a.js  1912_l.js  1991_f.js  1993_a.js  2000_c.js  2001_b.js  2004_c.js  2010_a.js  2010_c2.js
src/: commands.py  main.py
src/handlers/: list_llms_handler.py
src/llminify/: __main__.py  available_models.py  commands.py  file_explorer.py
(+424 files in other folders)
