[project]
name = "LLMinify"
version = "1.0.0"
description = "Default template for PDM package"
authors = [{ name = "Davi Sousa", email = "davi.gomes.sousa@ccc.ufcg.edu.br" }]
dependencies = ["click>=8.1.7", "ruff>=0.5.6", "pre-commit>=3.8.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python src/main.py"
