[project]
name = "LLMinify"
version = "1.0.0"
description = "Minify Javascript projects with LLMs"
authors = [{ name = "Davi Sousa", email = "davi.gomes.sousa@ccc.ufcg.edu.br" }]
dependencies = [
    "click>=8.1.7",
    "ruff>=0.5.6",
    "pre-commit>=3.8.0",
    "langchain>=0.2.12",
    "langchain-anthropic>=0.1.22",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "python -m llminify"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
